# ramen-timer

./: Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  notification.rs  timer.rs  ui.rs
